--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,6 +32,6 @@ deploy-production:
     script:
         - docker rm -f ${CONTAINER_NAME}-production || true
         - docker rmi -f $IMAGE_NAME || true
-        - docker run -d -p $EXPOSE_PORT_PRODUCTION:$CONTAINER_PORT --name ${CONTAINER_NAME}-production $IMAGE_NAME
+        - docker run -d -p $EXPOSE_PORT_PRODUCTION:$CONTAINER_PORT --name ${CONTAINER_NAME}-production --BASE_HREF='/staging/' $IMAGE_NAME
 
   
