--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@ionic/angular": "^4.7.1",
     "@sentry/browser": "^5.6.3",
     "@sentry/node": "^5.6.2",
+    "@types/gapi": "0.0.39",
+    "@types/gapi.auth2": "0.0.50",
     "angular-oauth2-oidc": "^8.0.4",
     "cardcast-api": "^0.2.3",
     "cordova-plugin-googleplus": "8.0.0",
