--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
+    "@ionic/storage": "^2.2.0",
     "@sentry/browser": "^5.6.3",
     "@sentry/node": "^5.6.2",
     "@types/gapi": "0.0.39",
