--- a/package.json
+++ b/package.json
@@ -21,12 +21,18 @@
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/google-plus": "^5.0.0-beta.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
+    "@ionic/storage": "^2.2.0",
     "@sentry/browser": "^5.6.3",
     "@sentry/node": "^5.6.2",
+    "@types/gapi": "0.0.39",
+    "@types/gapi.auth2": "0.0.50",
+    "angular-oauth2-oidc": "^8.0.4",
     "cardcast-api": "^0.2.3",
+    "cordova-plugin-googleplus": "8.0.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
     "sentry": "^0.1.2",
@@ -59,5 +65,10 @@
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-googleplus": {}
+    }
+  }
 }
